[package]
name = "nearx"
version = "0.1.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
description = "NEAR TX Swiss Army Knife"
repository = "https://github.com/calimero-is-near/nearx"
license = "MIT OR Apache-2.0"

[dependencies]
borsh = "0.10.3"
clap = "4.4.5"
color-eyre = "0.6.2"
const_format = "0.2.31"
near-account-id = "0.17.0"
near-crypto = "0.17.0"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"
serde_json = "1.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
